--- a/index.html
+++ b/index.html
@@ -55,8 +55,13 @@
     <div class="paper">
         <h1 style="text-align:center;padding-top:0.5em">Elemental 4 Sound Packs and Themes</h1>
         <p>
-            Elemental 4 got custom Sound Packs and Themes, and here is where the community made ones are listed.
+            Elemental 4 got custom Sound Packs and Themes, and here is where the community made ones are listed. You can play the main game <a href="https://elemental.davecode.me/">here</a>. You can contribute to the <a href="https://github.com/imdaveead/elemental-datapacks">GitHub Repository Here</a>.
         </p>
+        <p>
+            You can click any of the below links to automatically add the package to your game save.
+        </p>
+
+        <h3>Sound Packs</h3>
         <ul>
             <li><a class="soundpack-link" href="./audio/harry.json">Harry's Sounds</a></li>
             <li><a class="soundpack-link" href="./audio/colyderp-discord.json">Discord Sounds by Colyderp</a></li>
@@ -64,6 +69,12 @@
             <li><a class="soundpack-link" href="./audio/colyderp-micspam.json">Mic Spam Sounds By Colyderp im so sorry</a></li>
             <li><a class="soundpack-link" href="./audio/gold-is-the-new-silence.json">Gold is the new Silence</a></li>
         </ul>
+
+        <h3>Themes</h3>
+        <ul>
+            (themes aren't added to the main game yet)    
+        </ul>
+
         <script src="./generate.js"></script>
     </div>
 </body>
