--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             <li><a class="soundpack-link" href="./audio/colyderp-micspam.json">Mic Spam Sounds By Colyderp im so sorry</a></li>
             <li><a class="soundpack-link" href="./audio/gold-is-the-new-silence.json">Gold is the new Silence</a></li>
             <li><a class="soundpack-link" href="./audio/earthbound.json">Earthbound</a></li>
+            <li><a class="soundpack-link" href="./audio/colyderp-minecraft.json">Minecraft Sounds by Colyderp</a></li>
         </ul>
 
         <h3>Themes</h3>
