--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
 
         <h3>Themes</h3>
         <ul>
-            (themes aren't added to the main game yet)    
+            <li><a class="theme-link" href="./theme/discord-dark.json">Discord Dark</a></li>
+            <li><a class="theme-link" href="./theme/virtualboy.json">Virtual Boy</a></li>
+            <li><a class="theme-link" href="./theme/elemental3.json">Elemental 3</a></li>
         </ul>
 
         <script src="./generate.js"></script>
