--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <ul>
             <li><a class="theme-link" href="./theme/discord-dark.json">Discord Dark</a></li>
             <li><a class="theme-link" href="./theme/virtualboy.json">Virtual Boy</a></li>
-            <li><a class="theme-link" href="./theme/elemental3.json">Elemental 3</a></li>
+            <li><a class="theme-link" href="./theme/blue.json">Blue</a></li>
         </ul>
 
         <script src="./generate.js"></script>
