Add Elemental2.json (made by Adr)

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             <li><a class="soundpack-link" href="./audio/gold-is-the-new-silence.json">Gold is the new Silence</a></li>
             <li><a class="soundpack-link" href="./audio/earthbound.json">Earthbound</a></li>
             <li><a class="soundpack-link" href="./audio/colyderp-minecraft.json">Minecraft Sounds by Colyderp</a></li>
+            <li><a class="soundpack-link" href="./audio/elemental2.json">Elemental 2</a></li>
         </ul>
 
         <h3>Themes</h3>
